# Szhimatar2

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  RERENDER_DEBUG.md  RERENDER_DEBUGGING_SUMMARY.md  RERENDER_TESTING_GUIDE.md  index.html  package-lock.json  package.json  patch.js  sync-version.js  test_path_cleaning.ts  vite.config.ts  vitest.config.ts
.github/workflows/: build-mac.yml
docs/: RENDER_SYSTEM.md
src/: App.tsx  main.tsx  version.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: Szhimatar.VisualElementsManifest.xml
src-tauri/icons/: README.md
src-tauri/src/: main.rs  process_manager.rs
src/components/: AppVersion.tsx  CursorGlow.tsx  DuoEasterEggOverlay.css  DuoEasterEggOverlay.tsx  FFmpegManagerTest.tsx  FfmpegManager.tsx  MotionScreen.tsx  PresetManager.tsx  PreviewPanel.css  PreviewPanel.tsx  RenderModeSelector.css  RenderModeSelector.tsx  StatisticsPanel.tsx  VideoGuide.tsx  VideoInfoTest.tsx
src/contexts/: LanguageContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useFFmpegRenderer.tsx  useRenderQueue.ts  useStatistics.ts
src/lang/: ch.json  emp.json  en.json  eo.json  my.json  ru.json  vz.json
src/pages/: AudioSettings.tsx  GeneralSettings.tsx  MainWindow.tsx  VideoSettings.tsx  WatermarkSettings.tsx
src/services/: FFmpegFinder.ts  RenderScheduler.ts  RenderService.ts  StatisticsService.ts  UpdateService.ts
src/styles/: AudioSettings.css  FfmpegManager.css  MainWindow.css  PresetManager.css  SettingsWindow.css  StatisticsPanel.css  VideoInfoTest.css  VideoSettings.css  cursor-glow.css  global.css
src/themes/: amoled-night.json  blue-ocean.json  dark-blue.json  dark-gray.json  dark-green.json  dark-orange.json  dark-red.json  light.json  (+7 more)
(+5 files in other folders)
