[package]
name = "szhimatar"
version = "0.1.2"
description = "Offline video compressor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "window-unminimize",
    "window-maximize",
    "window-set-title",
    "window-start-dragging",
    "window-show",
    "window-hide",
    "window-set-focus",
    "window-unmaximize",
    "window-minimize",
    "window-close",
    "dialog-all",
    "fs-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
walkdir = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
